--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+      <meta http-equiv="Content-Security-Policy" content="default-src * gap://ready file:; font-src 'self' data:; media-src *; img-src * 'self' data:; style-src 'self' http://* https://* 'unsafe-inline' *; script-src 'self' http://* https://* 'unsafe-inline' 'unsafe-eval' *" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="HandheldFriendly" content="true"/>
     <meta name="MobileOptimized" content="320"/>
@@ -235,7 +236,7 @@
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="resources/libraries/framework7/js/framework7.min.js"></script>
      <!-- jquery libraries -->
-    <script type="text/javascript" src="resources/libraries/jquery/jqury-2.2.4.min.js"></script> 
+    <script type="text/javascript" src="resources/libraries/jquery/jquery-3.4.1.min.js"></script>
 <!--     <script type="text/javascript" src="resources/libraries/jquery/jquery.signalR-2.2.0.min.js"></script> -->
     
     <!-- Path to leaflet Library JS-->
